<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_alignParentTop="true"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.reputasi.callblocker.view.custom.ReputasiTextView
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            custom:fontType="robotoRegular"
            android:textSize="15sp"
            android:textColor="@color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/registration_pin_enter"/>
        <LinearLayout
            android:layout_margin="10dp"
            android:background="@drawable/pin_box"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <com.reputasi.callblocker.view.custom.ReputasiEditText
                android:layout_gravity="center_vertical"
                android:gravity="center_vertical"
                android:background="@null"
                android:textSize="13sp"
                android:layout_margin="10dp"
                android:hint="Pin"
                android:singleLine="true"
                custom:fontType="robotoRegular"
                android:paddingLeft="45dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <com.reputasi.callblocker.view.custom.ReputasiTextView
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:textColor="@color/white"
            android:text="@string/registration_pin_wrong_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:layout_alignParentBottom="true"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.reputasi.callblocker.view.custom.ReputasiTextView
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            custom:fontType="robotoRegular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="@string/registration_pin_no_sms"/>
        <Button
            android:layout_margin="20dp"
            android:background="@drawable/rectangle_button_signup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="Call to receive PIN"/>
    </LinearLayout>

</RelativeLayout>