<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/contribute_dialog_spacing">
    <com.reputasi.callblocker.view.custom.ReputasiTextView
        android:paddingTop="@dimen/contribute_textview_spacing"
        android:paddingBottom="@dimen/contribute_textview_spacing"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:text="@string/dialog_title_number"
        custom:fontType="robotoBold"
        android:textSize="15sp"/>
    <com.reputasi.callblocker.view.custom.ReputasiEditText
        android:id="@+id/edt_number"
        android:inputType="number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rectangle_edittext_bg_white"/>
    <com.reputasi.callblocker.view.custom.ReputasiTextView
        android:paddingTop="@dimen/contribute_textview_spacing"
        android:paddingBottom="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:text="@string/dialog_title_name"
        custom:fontType="robotoBold"
        android:textSize="15sp"/>
    <com.reputasi.callblocker.view.custom.ReputasiEditText
        android:id="@+id/edt_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rectangle_edittext_bg_white"/>
    <com.reputasi.callblocker.view.custom.ReputasiTextView
        android:paddingTop="@dimen/contribute_textview_spacing"
        android:paddingBottom="@dimen/contribute_textview_spacing"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:text="Reputation"
        custom:fontType="robotoBold"
        android:textSize="15sp"/>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2">
        <LinearLayout
            android:layout_weight="1"
            android:weightSum="2"
            android:layout_gravity="center_vertical"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageButton
                android:background="@null"
                android:src="@drawable/selector_thumb_up"
                android:id="@+id/iv_thumbs_up"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <ImageButton
                android:background="@null"
                android:id="@+id/iv_thumbs_down"
                android:src="@drawable/selector_thumb_down"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="match_parent" />
        </LinearLayout>
        <Button
            android:id="@+id/btn_next"
            android:background="@null"
            android:text="@string/dialog_next"
            android:textColor="@color/indicator_selected"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </LinearLayout>
    <!--<com.reputasi.callblocker.view.custom.ReputasiTextView
        android:paddingTop="@dimen/contribute_textview_spacing"
        android:paddingBottom="@dimen/contribute_textview_spacing"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:text="@string/submit_manual_foot_print"
        custom:fontType="robotoItalic"
        android:textSize="13sp"/>-->
</LinearLayout>